extends PanelContainer
## Bottom Navigation Bar
## Handles navigation between main screens

signal navigation_changed(screen_name: String)

@onready var home_button: Button = $HBox/HomeButton
@onready var quest_button: Button = $HBox/QuestButton
@onready var market_button: Button = $HBox/MarketButton
@onready var pvp_button: Button = $HBox/PvPButton
@onready var menu_button: Button = $HBox/MenuButton

var current_screen: String = ""

func _ready() -> void:
	# Connect buttons
	home_button.pressed.connect(func(): _navigate_to("home"))
	quest_button.pressed.connect(func(): _navigate_to("quest"))
	market_button.pressed.connect(func(): _navigate_to("market"))
	pvp_button.pressed.connect(func(): _navigate_to("pvp"))
	menu_button.pressed.connect(_show_menu)

func _navigate_to(screen: String) -> void:
	if current_screen == screen:
		return
	
	current_screen = screen
	navigation_changed.emit(screen)
	
	# Update button states (highlight active)
	_update_button_states(screen)

func _update_button_states(active_screen: String) -> void:
	home_button.modulate = Color.WHITE if active_screen == "home" else Color(0.7, 0.7, 0.7)
	quest_button.modulate = Color.WHITE if active_screen == "quest" else Color(0.7, 0.7, 0.7)
	market_button.modulate = Color.WHITE if active_screen == "market" else Color(0.7, 0.7, 0.7)
	pvp_button.modulate = Color.WHITE if active_screen == "pvp" else Color(0.7, 0.7, 0.7)

func _show_menu() -> void:
	# Create popup menu
	var popup = PopupMenu.new()
	add_child(popup)
	
	# Core screens
	popup.add_item("ðŸ“¦ Envanter", 0)
	popup.add_item("ðŸ‘¤ Karakter", 1)
	popup.add_item("ðŸ° Lonca", 2)
	popup.add_item("ðŸ‘¤ Profilim", 3)
	popup.add_separator()
	
	# Production & Economy
	popup.add_item("ðŸ—ï¸ Binalar", 4)
	popup.add_item("â›ï¸ Kaynak Toplama", 5)
	popup.add_item("âš™ï¸ Ãœretim YÃ¶netimi", 6)
	popup.add_item("ðŸ“¦ Depo", 7)
	popup.add_separator()
	
	# Systems
	popup.add_item("âš’ï¸ Demirci (Ã–rs)", 8)
	popup.add_item("âš—ï¸ ZanaatkarlÄ±k", 9)
	popup.add_item("ðŸ¦ Banka", 10)
	popup.add_item("ðŸ¤ Ticaret", 11)
	popup.add_separator()
	
	# Adventure
	popup.add_item("âš”ï¸ Zindanlar", 12)
	popup.add_item("ðŸ—ºï¸ Harita", 13)
	popup.add_item("âš”ï¸ Lonca SavaÅŸlarÄ±", 14)
	popup.add_separator()
	
	# Info & Settings
	popup.add_item("ðŸ† SÄ±ralama", 15)
	popup.add_item("ðŸ… BaÅŸarÄ±mlar", 16)
	popup.add_item("â­ Ä°tibar", 17)
	popup.add_item("ðŸŽª Etkinlikler", 18)
	popup.add_item("ðŸ¥ Hastane", 19)
	popup.add_item("ðŸ›’ DÃ¼kkan", 20)
	popup.add_item("âš™ï¸ Ayarlar", 21)
	
	popup.id_pressed.connect(_on_menu_item_selected)
	
	# Position popup above button
	var button_pos = menu_button.global_position
	popup.position = Vector2i(button_pos.x, button_pos.y - 900)
	popup.popup()

func _on_menu_item_selected(id: int) -> void:
	match id:
		0: navigation_changed.emit("inventory")
		1: navigation_changed.emit("character")
		2: navigation_changed.emit("guild")
		3: navigation_changed.emit("profile")
		4: navigation_changed.emit("building")
		5: navigation_changed.emit("mining")
		6: navigation_changed.emit("production")
		7: navigation_changed.emit("warehouse")
		8: navigation_changed.emit("anvil")
		9: navigation_changed.emit("crafting")
		10: navigation_changed.emit("bank")
		11: navigation_changed.emit("trade")
		12: navigation_changed.emit("dungeon")
		13: navigation_changed.emit("map")
		14: navigation_changed.emit("guild_war")
		15: navigation_changed.emit("leaderboard")
		16: navigation_changed.emit("achievement")
		17: navigation_changed.emit("reputation")
		18: navigation_changed.emit("event")
		19: navigation_changed.emit("hospital")
		20: navigation_changed.emit("shop")
		21: navigation_changed.emit("settings")
